--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/benjaminhallock/crusty-socks/issues"
   },
-  "homepage": "https://github.com/benjaminhallock/crusty-socks#readme"
+  "homepage": "https://github.com/benjaminhallock/crusty-socks#readme",
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "concurrently": "^9.1.2",
+    "react-router-dom": "^7.1.1",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^3.4.17"
+  }
 }
