--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm start",
     "client": "cd client && npm run dev",
-    "install": "cd server && npm install && cd ../client && npm install"
+    "install": "cd server && npm install && cd ../client && npm install",
+    "build": "cd client && npm run build && cd ../server && npm run build",
+    "deploy": "vercel --prod",
+    "dev": "cd server && npm run dev && cd ../client && npm run dev",
+    "lint": "cd client && npm run lint && cd ../server && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -24,6 +28,7 @@
   "homepage": "https://github.com/benjaminhallock/crusty-socks#readme",
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "canvas-confetti": "^1.9.3",
     "concurrently": "^9.1.2",
     "react-router-dom": "^7.1.1",
     "socket.io-client": "^4.8.1",
