--- a/package.json
+++ b/package.json
@@ -31,11 +31,6 @@
   },
   "homepage": "https://github.com/benjaminhallock/crusty-socks#readme",
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "canvas-confetti": "^1.9.3",
-    "concurrently": "^9.1.2",
-    "react-router-dom": "^7.1.1",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^3.4.17"
+    "concurrently": "^9.1.2"
   }
 }
