--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple pixel art pictionary game. Draw by number and guess the word.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cd client && npx vitest && cd ../server && npm test",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm start",
     "client": "cd client && npm run dev",
