--- a/.gitignore
+++ b/.gitignore
@@ -3,41 +3,41 @@
 
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+.pnp/
+.pnp.js
 
-# Environment variables
+# Testing
+coverage/
+
+# Production
+build/
+dist/
+.vercel
+
+# Environment files
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 config.env
-*.env
 
-# Build outputs
-dist/
-build/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# IDE and editor files
+# Editor directories and files
 .idea/
 .vscode/
 *.swp
 *.swo
 .DS_Store
+*.pem
 
-# Logs
-logs/
-*.log
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional: Typescript build info
+# TypeScript
 *.tsbuildinfo
-.vercel
+
+# Cache
+.eslintcache
+.cache/
