--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
   "name": "crustysocks",
   "version": "1.0.0",
-  "description": "A simple pixel art pictionary game. Draw by number and guess the word.",
+  "description": "A simple pixel art pictionary game",
   "main": "index.js",
   "scripts": {
-    "test": "cd client && npx vitest && cd ../server && npm test",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm start",
     "client": "cd client && npm run dev",
-    "install": "cd server && npm install && cd ../client && npm install",
-    "build": "cd client && npm run build && cd ../server && npm run build",
-    "deploy": "vercel --prod",
-    "dev": "cd server && npm run dev && cd ../client && npm run dev",
-    "lint": "cd client && npm run lint && cd ../server && npm run lint",
-    "deploy:server": "cd server && railway up",
-    "deploy:client": "cd client && vercel --prod",
-    "deploy:all": "npm run deploy:server && npm run deploy:client",
-    "git:push": "git add . && git commit -m \"update\" && git push"
+    "install": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
+    "build": "cd client && npm run build",
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
+    "lint": "concurrently \"cd client && npm run lint\" \"cd server && npm run lint\"",
+    "deploy": "vercel --prod"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/benjaminhallock/crusty-socks.git"
+    "url": "git+https://github.com/benjaminhallock/crustysocks.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "license": "MIT",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/benjaminhallock/crusty-socks/issues"
   },
   "homepage": "https://github.com/benjaminhallock/crusty-socks#readme",
   "dependencies": {
     "concurrently": "^9.1.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
