--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "cd client && npm run build",
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "lint": "concurrently \"cd client && npm run lint\" \"cd server && npm run lint\"",
+    "lint:fix": "concurrently \"cd client && npm run lint:fix\" \"cd server && npm run lint:fix\"",
     "deploy": "vercel --prod"
   },
   "repository": {
