--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "server": "cd server && npm start",
     "client": "cd client && npm run dev",
     "install": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
+    "client install": "cd client && npm install",
+    "server install": "cd server && npm install",
+    "test": "concurrently \"cd server && npm test\" \"cd client && npm test\"",
     "build": "cd client && npm run build",
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "lint": "concurrently \"cd client && npm run lint\" \"cd server && npm run lint\"",
