leaderboard, profile, preparing deployment

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,3 @@
-VITE_SOCKET_URL=https://crustysocks-server-production.up.railway.app
+# Production environment variables for client
+VITE_API_URL=https://crustysocks-server.vercel.app
+VITE_SOCKET_URL=https://crustysocks-server.vercel.app
