--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "vite build --mode production",
+    "start": "vite preview --port 5174",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview"
