--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,3 @@
 # Production environment variables for client
-VITE_API_URL=https://crustysocks-server.vercel.app
-VITE_SOCKET_URL=https://crustysocks-server.vercel.app
+VITE_API_URL=https://your-backend-url.onrender.com
+VITE_SOCKET_URL=https://your-backend-url.onrender.com
