--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "PixelParty drawing game",
   "private": true,
+  "type": "module",
   "workspaces": [
     "client",
     "server"
@@ -13,15 +14,17 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
-    "build": "npm run build:client",
+    "build": "npm run sync-constants && npm run build:client",
     "start:client": "cd client && npm run start",
     "start:server": "cd server && npm run start",
-    "start": "cd server && npm run start",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "lint": "concurrently \"cd client && npm run lint\" \"cd server && npm run lint\"",
     "lint:fix": "concurrently \"cd client && npm run lint:fix\" \"cd server && npm run lint:fix\"",
     "sync-constants": "node sync-constants.js",
     "predev": "npm run sync-constants",
-    "prebuild": "npm run sync-constants"
+    "prebuild": "npm run sync-constants",
+    "deploy:aws": "npm run build && eb deploy",
+    "deploy:vercel": "vercel --prod"
   },
   "keywords": [
     "drawing",
