--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,6 +2,7 @@ branch-defaults:
   main:
     environment: crustysocks-env
     group_suffix: null
+
 global:
   application_name: crustysocks
   branch: null
@@ -12,7 +13,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: eb-cli
+  profile: null
   repository: null
   sc: git
   workspace_type: Application
