--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Ensure server directory is tracked
-!server/
-
 # Dependencies
 node_modules/
 .pnp/
@@ -8,6 +5,7 @@ node_modules/
 
 # Testing
 coverage/
+.nyc_output/
 
 # Production
 build/
@@ -19,6 +17,42 @@ dist/
 .env.local
 .env.development.local
 .env.test.local
+.env.production.local
+config.env
+
+# AWS
+.elasticbeanstalk/
+.ebextensions/
+.aws/
+aws-credentials.json
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Build artifacts
+dist/
+build/
+.next/
+out/
+.cache/
+
+# Test coverage
+coverage/
+.nyc_output/
 .env.production.local
 config.env
 
