--- a/server/package.json
+++ b/server/package.json
@@ -1,31 +1,44 @@
 {
-  "name": "server",
+  "name": "crustysocks-server",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "type": "module",
+  "description": "Backend server for Crustysocks",
+  "private": true,
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "test": "jest",
+    "lint": "eslint . --ext .js --fix",
+    "build": "echo 'No build step required for Node.js'",
+    "clean": "rm -rf node_modules server/node_modules package-lock.json server/package-lock.json"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./jest.setup.js"
+    ]
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5",
-    "socket.io": "^4.7.4"
+    "mongoose": "^8.13.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-perfectionist": "^4.8.0",
-    "globals": "^15.14.0",
-    "nodemon": "^3.0.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "@eslint/js": "^9.24.0",
+    "eslint-plugin-perfectionist": "^4.11.0",
+    "@babel/preset-env": "^7.26.9",
+    "eslint": "^9.24.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.0"
   }
 }
