--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     }
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "axios": "^1.8.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
