--- a/server/package.json
+++ b/server/package.json
@@ -23,19 +23,21 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "eslint-plugin-perfectionist": "^4.11.0",
     "@babel/preset-env": "^7.26.9",
+    "@eslint/js": "^9.24.0",
     "eslint": "^9.24.0",
+    "eslint-plugin-perfectionist": "^4.11.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
