Fixed Eraser Tool
PixelCanvas now properly handles eraser tool when it is selected

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "devDependencies": {
     "concurrently": "^9.1.2",
     "npm-check-updates": "^17.1.18"
+  },
+  "dependencies": {
+    "rm": "^0.1.8"
   }
 }
