--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,7 @@
     "dev": "nodemon server.js",
     "test": "jest",
     "lint": "eslint . --ext .js --fix",
-    "build": "echo 'No build step required for Node.js'",
-    "clean": "rm -rf node_modules server/node_modules package-lock.json server/package-lock.json"
+    "build": "echo 'No build step required for Node.js'"
   },
   "jest": {
     "testEnvironment": "node",
