--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "bad-words": "^4.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
