--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,7 +2,10 @@ branch-defaults:
   main:
     environment: crustysocks-env
     group_suffix: null
-
+environment-defaults:
+  crustysocks-env:
+    branch: null
+    repository: null
 global:
   application_name: crustysocks
   branch: null
@@ -13,7 +16,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: null
+  profile: eb-cli
   repository: null
   sc: git
   workspace_type: Application
