--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,13 +8,30 @@ phases:
       - npm install -g yarn
       - cd client && yarn install
       - cd ../server && yarn install
-      
+
+  pre_build:
+    commands:
+      - cd client && yarn lint
+      - cd ../server && yarn lint
+
   build:
     commands:
       - cd client && yarn build
       - cd ../server && yarn build
 
+  post_build:
+    commands:
+      - cd client && aws s3 sync dist/ s3://${S3_BUCKET_NAME} --delete
+      - aws cloudfront create-invalidation --distribution-id ${CLOUDFRONT_DISTRIBUTION_ID} --paths "/*"
+
 artifacts:
-  files:
-    - '**/*'
-  base-directory: 'client/dist'
+  secondary-artifacts:
+    client:
+      files:
+        - "**/*"
+      base-directory: "client/dist"
+    server:
+      files:
+        - "**/*"
+        - "!node_modules/**/*"
+      base-directory: "server"
