--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
-    "lint": "eslint . --ext .js --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "build": "echo 'No build step required for Node.js'"
   },
   "jest": {
@@ -35,9 +36,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
-    "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0",
-    "eslint-plugin-perfectionist": "^4.11.0",
+    "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
