--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,51 @@
 # Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# IDE and Editor files
-.vscode/
-.vscode-test/
-.idea/
-.github/
-
-# AWS deployment
-.ebextensions/
-.elasticbeanstalk/
-
-# Environment files
-*.env
-*.env.*
-*.local
-
-# System files
-.DS_Store
-.DS_Store?
-
-# Logs
-*.log
-
-# Build and dist directories
+# Build and Distribution
 dist/
 build/
 coverage/
 
-# Temporary files
+# Environment and Config
+.env*
+config.env
+
+# IDE and Editor
+.vscode/
+.vscode-test/
+.idea/
+.github/
+.ebextensions/
+.elasticbeanstalk/
+
+# System and Temp Files
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+Thumbs.db
+ehthumbs.db
 *.swp
 *.swo
 *~
 *.bak
 *.tmp
 
-# Debug files
+# Logs and Debug
+logs/
+*.log
 .debug/
 debug.log
 
-# Package files
-*.tgz
-yarn.lock
-package-lock.json
-
-# Cache directories
+# Cache
 .npm/
 .eslintcache
 .cache/
+
+# Package Files
+package-lock.json
+yarn.lock
+*.tgz
