--- a/server/package.json
+++ b/server/package.json
@@ -24,22 +24,18 @@
   },
   "dependencies": {
     "bad-words": "^4.0.0",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
     "eslint": "^8.57.1",
-    "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
-    "supertest": "^7.1.0"
+    "eslint-plugin-node": "^11.1.0"
   }
 }
