--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server"
   ],
   "scripts": {
-    "dev": "concurrently 'cd client && npm run dev' 'cd server && npm run dev'",
+    "dev":  "concurrently \"cd client && npm run dev\" \"cd server && npm run dev\"",
     "build": "npm run sync-constants && cd client && npm run build && cd ../server && npm run build",
     "start": "npm run start --workspace=client && npm run start --workspace=server",
     "sync-constants": "node sync-constants.js",
