--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bad-words": "^4.0.0",
     "bcryptjs": "^3.0.2",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
@@ -34,8 +35,8 @@
   },
   "devDependencies": {
     "eslint": "^8.57.1",
+    "eslint-plugin-node": "^11.1.0",
     "mongodb-memory-server": "^10.1.4",
-    "nodemon": "^3.1.9",
-    "eslint-plugin-node": "^11.1.0"
+    "nodemon": "^3.1.9"
   }
 }
