--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
 	"devDependencies": {
 		"concurrently": "^9.1.2",
 		"npm-check-updates": "^17.1.18",
-		"rimraf": "^6.0.1"
+		"rimraf": "^6.0.1",
+		"eslint-plugin-perfectionist": "^4.11.0"
 	},
 	"dependencies": {
-		"eslint-plugin-perfectionist": "^4.11.0"
 	}
 }
